	- Removed many compilation warnings (STR #2988).
	- Fluid now generates code with less compiler warnings (STR #2813).
	- Many CMake improvements and fixes. Note: CMake is mostly operating
	  now, but not yet recommended for production use. Please test and
	  report issues.
	- Updated bundled zlib from 1.2.5 to 1.2.8.
	- Updated bundled libjpeg from jpeg-8c to jpeg-9a.


	Bug fixes

	- Fix potential crash if Fl_Window::icon(NULL) was called to clear
	  (reset) a window icon. This is now legal and documented behavior.
	  The same applies to Fl_Window::default_icon().
	- Allow widget callback to be NULL, i.e. no callback (STR #2835).
	- Fixed Fl_Help_View buffer overflow (STR #3275).
	- Fl_Browser now correctly adjusts its scrollbars when the default
	  text size is changed with textsize(int) (STR #3057).
	- Fixed Fl_Text_Display/Fl_Text_Editor slow scrolling, line number
	  display, wrap mode "hiding" text behind scrollbars, and more
	  scrollbar handling (alignment) (STR #3272).
	- Fixed valgrind warning (uninitialized variable) in Fl_Window.
	  Visible only with FLTK_ABI_VERSION >= 10303, since FLTK 1.3.3.
	- Fixed Windows drag'n'drop not showing insert position if the drop
	  target is inside the same window or process (STR #3209).
	- Fixed undefined reference building shared cairo library (STR #3276).
	- Fixed Fl_Browser if text argument to some methods is NULL (STR #3269).
	- Fixed missing image release in fluid (STR #2840).
	- Fixed out-of-bounds memory access in fluid (STR #3263).
	- Fixed trailing white space in fluid .fl files (STR #3239).
	- Several box types were not drawn correctly when deactivated.
	  The background color for deactivated widgets is now correct:
	  fl_inactive(color()) (STR #2907).
	- Fixed Fl_Pixmap (background) drawing to respect the clip region
	  (STR #3206).
	- Reading of .pbm image files is fixed: 1 is now interpreted as
	  black, and images of width a multiple of 8 are correctly read.